# cornice

./: .gitignore  .gitmodules  .travis.yml  CHANGES.txt  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  book.json  buildout.cfg  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: project-is-unmaintained.md
.github/workflows/: publish.yml  test.yml
cornice/: __init__.py  config.py  cors.py  errors.py  exceptions.py  interfaces.py  middlewares.py  pyramidhook.py  renderer.py  resource.py  schemas.py  security.py  service.py  sphinxext.py  tests.py  util.py  validators.py  views.py  wsgiapp.py
cornice/auth/: __init__.py  ipauth.py  tests.py
cornice/ext/: sphinxext.py  spore.py  swagger.md  swagger.py  swagger_model.py  wtforms.py
cornice/scaffolds/: __init__.py
cornice/schemas/: __init__.py  colander.py  colander_adapter.py  compat.py  generic.py
cornice/static/: cornice.css
cornice/template/: __init__.py
cornice/templates/: apidocs.mako  config.mako
cornice/tests/: __init__.py  requirements.txt  schema.py  support.py  test_colander.py  test_cors.py  test_errors.py  (+11 more)
docs/: Makefile  make.bat  requirements.txt
tests/: requirements.txt  support.py  test_colander.py  test_cors.py  test_errors.py  test_imperative_resource.py  test_init.py  test_pyramidhook.py  test_renderer.py  test_resource.py  test_resource_callable.py  test_resource_custom_predicates.py  test_resource_traverse.py  test_service.py  test_service_definition.py  test_util.py  test_validation.py  validationapp.py
(+73 files in other folders)
