[project]
dynamic = ["version", "dependencies", "readme"]
name = "cornice"
description = "Define Web Services in Pyramid."
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Framework :: Pylons",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
keywords = ["web pyramid pylons"]
authors = [
  {name = "Mozilla Services", email = "services-dev@mozilla.org"},
]

[project.urls]
Repository = "https://github.com/Cornices/cornice"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }
readme = {file = ["README.rst", "CONTRIBUTORS.txt"]}

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest<9",
    "pytest-cache<2",
    "pytest-cov<5",
    "WebTest<4",
    "marshmallow<4",
    "colander<3",
]

[tool.pip-tools]
generate-hashes = true

[tool.coverage.run]
relative_files = true

[tool.ruff]
line-length = 99
extend-exclude = [
    "__pycache__",
    ".venv/",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
